--- a/analysis/TCGA_immune_states.Rmd
+++ b/analysis/TCGA_immune_states.Rmd
@@ -176,9 +176,37 @@ for (tissue in names(immune.tissue.odds.ratio)) {
         ggsave(plot = int.heatmap,
                filename = file.path(fig.dir, "immune_to_signature", "by_tissues", "oddsratio",  
                                     paste0("TCGA", tissue, "_sig_pathway.dotplot.tcga.pdf")),
-               height = 5, width = 6, bg = "white")
+               height = 5, width = 5, bg = "white", device = cairo_pdf)
     }
 }
+tissue = "Cervix_CA"
+int.heatmap = ggheatmap_wrapper(immune.tissue.odds.ratio[[tissue]][1, 1, drop = FALSE], 
+                                        title = tissue, limits = c(-3, 3))
+
+ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "immune_to_signature", "by_tissues", "oddsratio",  
+                                    paste0("TCGA", tissue, "_sig_pathway.dotplot.tcga.pdf")),
+               height = 3, width = 3.5, bg = "white", device = cairo_pdf)
+
+
+tissue = "Head_SCC"
+int.heatmap = ggheatmap_wrapper(immune.tissue.odds.ratio[[tissue]][c(1,3), , drop = FALSE], 
+                                        title = tissue, limits = c(-3, 3))
+
+ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "immune_to_signature", "by_tissues", "oddsratio",  
+                                    paste0("TCGA", tissue, "_sig_pathway.dotplot.tcga.pdf")),
+               height = 3.5, width = 3.5, bg = "white", device = cairo_pdf)
+
+
+tissue = "Uterus_AdenoCa"
+int.heatmap = ggheatmap_wrapper(immune.tissue.odds.ratio[[tissue]], 
+                                        title = tissue, limits = c(-3, 3))
+
+ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "immune_to_signature", "by_tissues", "oddsratio",  
+                                    paste0("TCGA", tissue, "_sig_pathway.dotplot.tcga.pdf")),
+               height = 3.5, width = 3.5, bg = "white", device = cairo_pdf)
 ```
 
 ```{r}
@@ -286,7 +314,12 @@ colnames(tcga.immune.tissues) = sapply( colnames(tcga.immune.tissues),
  
 
 ```{r}
-tcga.colon.immune.states = pathways_signatures_heatmap(tissue = "ColoRect_AdenoCa", signatures = tcga.immune.sigs, pathways = tcga.immune.tissues, border_color = NA)
+tcga.colon.immune.states = pathways_signatures_heatmap(
+    tissue = "ColoRect_AdenoCa",
+    signatures = tcga.immune.sigs, 
+    pathways = tcga.immune.tissues, 
+    border_color = NA,
+     angle_col = 90)
 
 ggsave(plot = tcga.colon.immune.states, 
        filename = file.path(fig.dir, "tcga.colon.immune.states.heatmap.pdf"),
@@ -295,7 +328,11 @@ ggsave(plot = tcga.colon.immune.states,
 ```
 
 ```{r}
-tcga.uterine.immune.states = pathways_signatures_heatmap(tissue = "Uterus_AdenoCa", signatures = tcga.immune.sigs, pathways = tcga.immune.tissues, border_color = NA)
+tcga.uterine.immune.states = pathways_signatures_heatmap(
+    tissue = "Uterus_AdenoCa", 
+    signatures = tcga.immune.sigs, 
+    pathways = tcga.immune.tissues, 
+    border_color = NA, angle_col = 90)
 
 ggsave(plot = tcga.uterine.immune.states, 
        filename = file.path(fig.dir, "tcga.uterus.immune.states.heatmap.pdf"),
