--- a/analysis/survival_summaries.Rmd
+++ b/analysis/survival_summaries.Rmd
@@ -166,18 +166,27 @@ dev.off()
 
 ```{r}
 plot_sigint_forest = function(data) {
-    pp = data %>% 
+    data.processed = data %>% 
         drop_na() %>%
         filter(P.val < 0.05, ! is.infinite(lower.95), ! is.infinite(upper.95),
                ! is.infinite(log(lower.95) ), ! is.infinite(log(upper.95)) ) %>%
         filter(grepl("+", params,fixed = TRUE)) %>% 
-        filter(! params %in% c("age_at_diagnosis", "log(total_muts + 1)")) %>%
-           ggplot(aes(y = params, x = log(estimate), color = tissue, shape = type)) +
-           geom_point(position=position_dodge(0.7), size = 3) +
-           geom_errorbar(aes(y = params, xmin = log(lower.95), xmax = log(upper.95)),
+        filter(! params %in% c("age_at_diagnosis", "log(total_muts + 1)")) 
+    
+    param.order = data.processed %>%
+        arrange(tissue, estimate) %>%
+        pull(params) %>% unique() %>% rev()
+    
+    data.processed = data.processed %>% 
+        mutate(params = factor(params, levels = param.order))
+    
+    pp = data.processed %>%
+        ggplot(aes(y = params, x = log(estimate), color = tissue, shape = type)) +
+        geom_point(position=position_dodge(0.7), size = 3) +
+        geom_errorbar(aes(y = params, xmin = log(lower.95), xmax = log(upper.95)),
                           width=.2,
                           position=position_dodge(0.7)) +
-           scale_y_discrete(position = "right")
+        scale_y_discrete(position = "right")
         
         pgbuild = ggplot_build(pp)
         xlimits = pgbuild$layout$panel_scales_x[[1]]$range$range
