--- a/analysis/PCAWG_sig_pathways_survivals.Rmd
+++ b/analysis/PCAWG_sig_pathways_survivals.Rmd
@@ -135,6 +135,17 @@ pos.coxlist = get_surv_coxlist(positive.sig.pathway,
 saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.nototmut.nonbinary.RDS"))
 ```
 
+
+```{r}
+pos.picked.models = get_surv_best_model(positive.sig.pathway, 
+                                 dataset = PCAWG.path.sig.aggregate,
+                                 clin.df = PCAWG.clin.df,
+                                 with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
+                                 binary.status = FALSE)
+saveRDS(pos.picked.models, file = file.path(out.dir, "pcawg.pos.sig.path.picked.models.RDS"))
+```
+
 ### Survival models for negative interactions
 
 ```{r}
@@ -204,6 +215,18 @@ neg.coxlist = get_surv_coxlist(negative.sig.pathway,
                                  binary.status = FALSE )
 saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.nototmut.nonbinary.RDS"))
 ```
+
+
+```{r}
+neg.picked.models = get_surv_best_model(negative.sig.pathway, 
+                                 dataset = PCAWG.path.sig.aggregate,
+                                 clin.df = PCAWG.clin.df,
+                                 with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
+                                 binary.status = FALSE)
+saveRDS(neg.picked.models, file = file.path(out.dir, "pcawg.neg.sig.path.picked.models.RDS"))
+```
+
 
 ### Melanoma survival for the two classes
 
