--- a/analysis/TCGA_sig_pathways_survivals.Rmd
+++ b/analysis/TCGA_sig_pathways_survivals.Rmd
@@ -113,6 +113,9 @@ for (i in 1:length(pos.plotlist) ) {
 }
 dev.off()
 ```
+
+
+
 ```{r}
 pos.coxlist = get_surv_coxlist(positive.sig.pathway, 
                                  dataset = TCGA.path.sig.aggregate,
@@ -134,6 +137,15 @@ pos.coxlist = get_surv_coxlist(positive.sig.pathway,
 saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.nototmut.nonbinary.RDS"))
 ```
 
+```{r}
+pos.picked.models = get_surv_best_model(positive.sig.pathway, 
+                                 dataset = TCGA.path.sig.aggregate,
+                                 clin.df = TCGA.clin.df,
+                                 with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
+                                 binary.status = FALSE)
+saveRDS(pos.picked.models, file = file.path(out.dir, "tcga.pos.sig.path.picked.models.RDS"))
+```
 
 ### Survival models for negative interactions
 
@@ -205,7 +217,18 @@ neg.coxlist = get_surv_coxlist(negative.sig.pathway,
 
 saveRDS(neg.coxlist, file = file.path(out.dir, "neg.coxlist.nototmut.nonbinary.RDS"))
 ```
-### TCGA survival 
+
+```{r}
+neg.picked.models = get_surv_best_model(negative.sig.pathway, 
+                                 dataset = TCGA.path.sig.aggregate,
+                                 clin.df = TCGA.clin.df,
+                                 with.total.muts = TRUE, 
+                                 tmb.logged = TRUE,
+                                 binary.status = FALSE)
+saveRDS(neg.picked.models, file = file.path(out.dir, "tcga.neg.sig.path.picked.models.RDS"))
+```
+
+### TCGA survival for specific interactions 
 
 ```{r}
 stomach_MMR_HIPPO = survival_for_interactions(dataset = TCGA.path.sig.aggregate, 
