--- a/analysis/TCGA_sig_sig_survivals.Rmd
+++ b/analysis/TCGA_sig_sig_survivals.Rmd
@@ -133,7 +133,7 @@ pos.picked.models = get_surv_best_model(positive.sig.sig,
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
                                      "binary.status" = c(TRUE, FALSE) ),
-                                 min.sample.fraction = 0.2)
+                                 min.sample.fraction = 0)
 saveRDS(pos.picked.models, file = file.path(out.dir, "tcga.pos.sig.sig.picked.models.RDS"))
 
 # pos.picked.models %>% HR_summary_for_all(type = "pos") %>% plot_sigint_forest()
@@ -289,5 +289,18 @@ P$plot = P$plot + theme(legend.background = element_rect(fill='transparent'),
 
 ggsave(filename = file.path(fig.dir, "tcga.stomach.MMR_SBS17.APOBEC_SBS40.Others.survival.pdf"),
                             width = 4, height = 3)
+```
+
+
+```{r}
+skin_SBS38_Technical = survival_for_interactions(dataset = TCGA.full.subset.ann, 
+                                                      signatures = c("Technical", "SBS38"), 
+                                                      tissues = "Skin_Melanoma", 
+                                                      clin.df = TCGA.clin.df,
+                                                      legend_pos = c(0.8, 0.8),
+                                                      with.total.muts = TRUE,
+                                                      tmb.logged = TRUE,
+                                                      binary.status = TRUE,
+                                             conf.int = TRUE)
 ```
 
